<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quizlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_weight="0"
                android:src="@drawable/baseline_person_2_24" />

            <TextView
                android:id="@+id/ShowName"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#9273A1" />

            <ImageView
                android:id="@+id/NameTextView"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_weight="0"
                android:src="@drawable/coin2" />

            <TextView
                android:id="@+id/CoinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/coinsText"
                android:textColor="#9273A1" />
        </LinearLayout>
        <Button
            android:id="@+id/Option1"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/option1Text"
            android:backgroundTint="#FF9273A1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Question" />

        <Button
            android:id="@+id/Option2"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="#FF9273A1"
            android:text="@string/option2Text"
            app:layout_constraintEnd_toEndOf="@+id/Option1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Option1"
            app:layout_constraintTop_toBottomOf="@+id/Option1" />

        <Button
            android:id="@+id/Option3"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="#FF9273A1"
            android:text="@string/option3Text"
            app:layout_constraintEnd_toEndOf="@+id/Option2"
            app:layout_constraintStart_toStartOf="@+id/Option2"
            app:layout_constraintTop_toBottomOf="@+id/Option2" />

        <Button
            android:id="@+id/Option4"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/option4Text"
            android:backgroundTint="#FF9273A1"
            app:layout_constraintEnd_toEndOf="@+id/Option3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Option3"
            app:layout_constraintTop_toBottomOf="@+id/Option3" />

<androidx.cardview.widget.CardView
    android:id="@+id/CVImg"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_137sdp"
    android:layout_marginTop="@dimen/_28sdp"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginRight="@dimen/_12sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/linearLayout"
    app:cardCornerRadius="30dp">

        <ImageView
            android:id="@+id/QuizImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/math2"/>

</androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/QuestionType"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:text="@string/questionType"
            android:textAlignment="center"
            android:textColor="#FF9273A1"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="@id/CVImg"
            app:layout_constraintStart_toStartOf="@id/CVImg"
            app:layout_constraintTop_toBottomOf="@id/CVImg" />
        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="#FF9273A1"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/QuestionType" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/winner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <ImageView
            android:id="@+id/win"
            android:layout_height="@dimen/_307sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_width="match_parent"
            app:srcCompat="@drawable/winner" />

        <TextView
            android:id="@+id/Congratulations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/congratulationsText"
            android:textAlignment="center"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/loser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <ImageView
            android:id="@+id/Sorry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_307sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_6sdp"
            app:srcCompat="@drawable/loser" />

        <TextView
            android:id="@+id/TryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/tryAgainText"
            android:textAlignment="center"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>