<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.spin.SpinFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_weight="0"
            android:src="@drawable/baseline_person_2_24" />

        <TextView
            android:id="@+id/ShowName"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#9273A1" />

        <ImageView
            android:id="@+id/NameTextView"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_weight="0"
            android:src="@drawable/coin2" />

        <TextView
            android:id="@+id/CoinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/coinsText"
            android:textColor="#9273A1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/chancesLeft"
        android:textAlignment="center"
        android:textColor="#9273A1"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <TextView
        android:id="@+id/SpinChances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/coinsText"
        android:textAlignment="center"
        android:textColor="#9273A1"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <ImageView
        android:id="@+id/spinImg"
        android:layout_width="@dimen/_249sdp"
        android:layout_height="@dimen/_260sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_39sdp"
        android:src="@drawable/baseline_arrow_upward_24"
        app:layout_constraintBottom_toBottomOf="@id/spinImg"
        app:layout_constraintEnd_toEndOf="@id/spinImg"
        app:layout_constraintStart_toStartOf="@id/spinImg"
        app:layout_constraintTop_toTopOf="@id/spinImg" />

    <Button
        android:id="@+id/spinButton"
        android:layout_width="@dimen/_161sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinImg"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>